# estudai

./: .gitignore  README.md  issues.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  windows-package.yml
data/examples/: flashcards.csv  math.csv
docs/: DEVELOPMENT.md
scripts/: check.py  checkbox_example.py  format.py
src/estudai/: __init__.py  main.py
src/estudai/services/: __init__.py  csv_flashcards.py  folder_catalog.py  folder_storage.py  hotkeys.py  notebooklm_import.py  settings.py  study_progress.py  study_time.py
src/estudai/ui/: __init__.py  application_state.py  audio_playback.py  flashcard_sequence.py  folder_context.py  main_window.py  message_box.py  navigation_icons.py  notebooklm_import_dialog.py  sidebar_folders.py  sidebar_overlay.py  study_session.py  timer_page.py
src/estudai/ui/controllers/: __init__.py  app_shell_controller.py  hotkey_controller.py  management_page_controller.py  session_mutation_controller.py  sidebar_folder_operations_controller.py  timer_page_controller.py
tests/: __init__.py  conftest.py  test_app_shell_controller.py  test_application_state.py  test_error_paths.py  test_flashcard_edit_dialog.py  test_folder_catalog_service.py  test_folder_context.py  test_hotkey_controller.py  test_hotkeys.py  test_latex_utils.py  test_main_entrypoint.py  test_main_window.py  test_main_window_sidebar_behaviors.py  test_management_page_controller.py  test_management_services.py  test_notebooklm_import_dialog.py  test_session_mutation_controller.py  test_settings.py  test_sidebar_folder_operations_controller.py  test_sidebar_folders.py  test_stats_page.py  test_study_progress.py  test_study_session.py  test_study_time.py  test_timer_page.py  test_timer_page_controller.py
tests/unit/: test_main.py  test_main_entrypoint.py  test_main_window.py  test_main_window_sidebar_behaviors.py  test_management_services.py  test_notebooklm_import.py  test_notebooklm_import_dialog.py  test_settings.py  test_smoke.py  test_timer_page.py
(+16 files in other folders)
