[project]
name = "Estudai"
version = "1.2.2"
description = "Flashcard timer for studying while multitasking"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard>=0.13.5",
    "pylatexenc>=2.10",
    "pyside6>=6.10.2",
    "python-xlib>=0.33",
]

[project.scripts]
estudai = "estudai.main:main"

[tool.uv]
package = true

[tool.cxfreeze]
executables = [
    { script = "src/estudai/main.py", base = "gui", target_name = "Estudai.exe", icon = "data/estudai.ico", shortcut_name = "Estudai", shortcut_dir = "DesktopFolder" },
]

[tool.cxfreeze.build_exe]
include_msvcr = true
include_files = ["data/default.mp3", "data/estudai.svg", "data/estudai.ico"]
excludes = ["tkinter", "unittest", "test", "pydoc"]

[tool.cxfreeze.bdist_msi]
add_to_path = false
all_users = false
initial_target_dir = "[ProgramFiles64Folder]Estudai"
install_icon = "data/estudai.ico"
upgrade_code = "{D143C7D2-37F8-4B4A-AFC2-9D45E8A6A6C8}"

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
